--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "firebase-blog",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://aphatheology.github.io/React_Blog",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
@@ -9,6 +10,7 @@
     "cloudinary": "^1.29.1",
     "dotenv": "^16.0.1",
     "firebase": "^9.8.1",
+    "gh-pages": "^4.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
@@ -18,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
