--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "firebase-blog",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://aphatheology.github.io/React_Blog",
+  "homepage": "https://glowing-frangipane-1f9aea.netlify.app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
